--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Enviar Números</h1>
         <h2>Condições</h2>
         <form id="verifica_numeros">
-            <input type="number" id="A" required placeholder="Número A" />
-            <input type="number" id="B" required placeholder="Número B" />
-            <button type="submit" id="btn=verificar">Verificar validade</button>
+            <input name="a" type="number" id="A" required placeholder="Número A" />
+            <input name="b" type="number" id="B" required placeholder="Número B" />
+            <button type="submit" id="verificar">Verificar validade</button>
         </form>
         <p class="message_sucess"></p>
     </div>
